refactor: bar chart

--- a/docs/static/css/style.css
+++ b/docs/static/css/style.css
@@ -1,5 +1,5 @@
-html { 
-  height:100%; 
+html {
+  height:100%;
 }
 
 body {
@@ -45,4 +45,8 @@ background-position: center center;
 
 .border-warning {
   border-color: #f0ea3b !important;
+}
+
+.chart-container {
+  height: 400px;
 }
